PBSawatea Changes
=================
Authors : RH  = Rowan Haigh
          AME = Andrew Edwards

0.10  2011-08-10  Rowan
  - Added new function 'importLik' to import an Awatea likelihood file, usually called 'likelihood.dat'. (RH 8/10)
  - Added 'input' directory for the Awatea input files used; format = spp-area-run.txt. (RH 8/2)
  - Modified 'runADMB' to handle situations when 'Awatea.cor' and 'Awatea.std' are not available ( when -nohess is specified in MPD call). (RH 8/2)
  - Added new function 'plotBars' to illustrate how an age composition compares with an equilibrium age structure. (RH 8/1)
  - Modified 'importRes' to import virgin vulnerable and spawning biomass values. (RH 7/31)
  - Added new function 'importCor' to import the Awatea correlation file. (RH 7/30)
  - Added new functions 'importPar' and 'importStd'  to import all and estimated parameters, respectively. (RH 7/27)
  - Updated AWATEAdata class (not thoroughly tested yet). (RH 7/27)
  - Updated 'runSweave' to handle surveys with missing age composition data. (RH 7/26)
  - Updated 'runADMB' to find the system exectuable file 'Awatea.exe' using the 'awateaPath' argument. (RH 7/25)
  - Updated the 'runMPD' wrapper for 'runSweave'. (RH 7/25)
  - Updated 'runSweave' and 'run-Master.Snw' to be more flexible wrt the number of surveys. (7/19)
  - Updated 'runADMB', 'runSweave', 'runSweaveMCMC' to deal with POP in WCVI and WCHG. (RH 7/18)
  - Implemented Brian Ripley's suggestion to remove NOTES about 'no visible binding for global variable xxx':
	if(getRversion() >= "2.15.1") globalVariables(names=c(...), package="PBSawatea") (RH 7/17)

0.09  2011-12-20  Rowan
  - Added documentation for AWATEAdata S4 class; cleaned up mismatches caught by Rcheck. (RH 12/20)
  - Added new function 'compBmsy' to compare biomass posteriors relative to Bmsy. (RH 12/19)
  - Revised function 'plotBox' to handle vector data not in list format. (RH 12/15)