@@ -4,6 +4,7 @@ Authors : RH  = Rowan Haigh
           AME = Andrew Edwards
 
 0.10  2011-08-10  Rowan
+  - Updated 'plotBars' to determine start year from results file. (RH 8/10)
   - Added new function 'importLik' to import an Awatea likelihood file, usually called 'likelihood.dat'. (RH 8/10)
   - Added 'input' directory for the Awatea input files used; format = spp-area-run.txt. (RH 8/2)
   - Modified 'runADMB' to handle situations when 'Awatea.cor' and 'Awatea.std' are not available ( when -nohess is specified in MPD call). (RH 8/2)
